Changes in Release 2.3.1
=============================================
[SIDP-491] - Stylesheet link in login.jsp is not inside the head tag
[SIDP-494] - login.config sample needs updating
[SIDP-497] - Queries should return the same NameID supplied by the caller

Changes in Release 2.3.0
=============================================
[SIDP-272] - Regenerate self-signed certificate with installer task
[SIDP-404] - Add an install-time setting for the path to web.xml
[SIDP-429] - Limit metadata SP credential resolution for encryption to RSA keys only
[SIDP-442] - Add JSESSIONID and ClientIP to MDC
[SIDP-448] - Create a login handler that provides authn "state" data to an external authentication 
             system and has that system authenticate the user.
[SIDP-461] - Add legacy Shib SSO protocol as binding for IdP-initiated SSO for SAML 2.0
[SIDP-464] - An SPNameQualifier in NameIDPolicy always treated as an affiliation
[SIDP-468] - Add taglib to simplify rendering login pages.
[SIDP-469] - eduPersonTargetedID Could Be Separately Commented
[SIDP-471] - Taglibs appear to be caching SP information
[SIDP-401] - Quick installer no longer does special things to the Tomcat installation for the "administrator" login
[SIDP-474] - NPE in taglib processing (bug never released).
[SIDP-475] - Better login page for IdP
[SIDP-478] - ECP profile support
[SIDP-480] - Update POM to add plugin versions, use / publish to Shib.net Repo, and attach generated source and Javadocs
[SIDP-482] - JSP pages should HTML-encode any strings they handle
[SIDP-483] - Log Completed, Unencrypted SAML Assertion
[SIDP-484] - Login stops at AuthnEngine with an empty page
[SIDP-485] - <img> inside HTML pages must have alt attribute.[SIDP-486] - login.jsp page contains old wiki link
[SIDP-487] - More login.jsp changes (CR/LF issues, missing period)
[SIDP-488] - PeerEntityId property not set on SAML queries
[SIDP-489] - Typos in idpui.tld

Changes in Release 2.2.1